...
"Choose skin tone" = "Choose skin tone";
"Emoji" = "Emoji";
"Emoji are unavailable right now" = "Emoji are unavailable right now";
"Emoji search" = "Emoji search";
"Flags" = "Flags";
"Food" = "Food";
"Letters" = "Letters";
"No emoji found" = "No emoji found";
"Objects" = "Objects";
"People" = "People";
"Recent" = "Recent";
"Results" = "Results";
"Results for %@" = "Results for %@";
...
